feat: add rack endpoint
